--- a/_config.yml
+++ b/_config.yml
@@ -10,3 +10,5 @@ description: Datascience Newbie, India.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars0.githubusercontent.com/u/21377152?v=3
+
+theme: jekyll-theme-hacker
